Updated Save buttons to match each other Files modified - [MyProfile.html]

--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -176,7 +176,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow26">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn33_5">
-                                        <wm-button caption="Save" type="submit" class="btn-primary" on-click="buttonUpdateSubscriptionsClick($event, $scope)" name="button10_1" margin="unset unset unset 80%" iconclass="wi wi-save"></wm-button>
+                                        <wm-button caption="Save" type="submit" class="btn-default btn-primary" on-click="buttonUpdateSubscriptionsClick($event, $scope)" name="button10_1" margin="unset unset unset 80%" iconclass="wi wi-save"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
