--- a/src/main/webapp/pages/MCNewResidentialStructure/MCNewResidentialStructure.html
+++ b/src/main/webapp/pages/MCNewResidentialStructure/MCNewResidentialStructure.html
@@ -13,7 +13,7 @@
                     <wm-gridrow name="gridrow12">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn13" padding="2em unset">
                             <wm-label padding="0.5em 0.5em 0em 0.5em" name="label1" width="100%" fontsize="20" fontweight="bold" horizontalalign="center" caption="New Residential Structure Application"></wm-label>
-                            <wm-panel iconclass="wi wi-account-circle" name="panel1" title="Property Owner Details" badgetype="default" class="panel-info">
+                            <wm-panel iconclass="wi wi-account-circle" name="panel1" title="Property Owner Details" badgetype="default" class="panel-primary">
                                 <wm-gridrow name="gridrow1">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn1">
                                         <wm-form-field name="propertyOwnerName" displayname="Property Owner Name" required="false" show="true" generator="assigned" primary-key="false" key="propertyOwnerName" type="string" is-related="false" maxchars="255"
@@ -29,7 +29,7 @@
                     </wm-gridrow>
                     <wm-gridrow name="gridrow11_1">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn12_1">
-                            <wm-panel iconclass="wi wi-building" name="panel2" title="Building Dimensions" class="panel-info">
+                            <wm-panel iconclass="wi wi-building" name="panel2" title="Building Dimensions" class="panel-primary">
                                 <wm-gridrow name="gridrow4">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn4">
                                         <wm-form-field name="basementSft" displayname="Basement Sft" required="false" show="true" generator="assigned" primary-key="false" key="basementSft" type="string" is-related="false" maxchars="255" pc-display="true"
@@ -53,7 +53,7 @@
                     </wm-gridrow>
                     <wm-gridrow name="gridrow11_2">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn15" padding="2em unset">
-                            <wm-panel iconclass="wi wi-account-circle" title="Property Details" badgetype="default" class="panel-info" name="panel3">
+                            <wm-panel iconclass="wi wi-account-circle" title="Property Details" badgetype="default" class="panel-primary" name="panel3">
                                 <wm-gridrow name="gridrow12_1">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn16">
                                         <wm-form-field name="sidingMaterial" displayname="Siding Material" required="false" show="true" generator="assigned" primary-key="false" key="sidingMaterial" type="string" is-related="false" maxchars="255" pc-display="true"
