--- a/src/main/webapp/pages/SFNewResidentialStructure/SFNewResidentialStructure.html
+++ b/src/main/webapp/pages/SFNewResidentialStructure/SFNewResidentialStructure.html
@@ -15,7 +15,7 @@
                     <wm-gridrow name="gridrow12">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn13" padding="2em unset">
                             <wm-label padding="0.5em 0.5em 0em 0.5em" name="label1" width="100%" fontsize="20" fontweight="bold" horizontalalign="center" caption="New Residential Structure"></wm-label>
-                            <wm-panel iconclass="wi wi-account-circle" name="panel1" title="Property Owner Details" badgetype="default" class="panel-info">
+                            <wm-panel iconclass="wi wi-account-circle" name="panel1" title="Property Owner Details" badgetype="default" class="panel-primary">
                                 <wm-gridrow name="gridrow1">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn1">
                                         <wm-form-field name="propertyOwnerName" displayname="Property Owner Name" show="true" primary-key="false" generator="assigned" key="propertyOwnerName" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -29,7 +29,7 @@
                     </wm-gridrow>
                     <wm-gridrow name="gridrow11_1">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn12_1">
-                            <wm-panel iconclass="wi wi-building" name="panel2" title="Building Dimensions" class="panel-info">
+                            <wm-panel iconclass="wi wi-building" name="panel2" title="Building Dimensions" class="panel-primary">
                                 <wm-gridrow name="gridrow4">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn4">
                                         <wm-form-field name="basementSft" displayname="Basement Sft" show="true" primary-key="false" generator="assigned" key="basementSft" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -48,27 +48,30 @@
                     </wm-gridrow>
                     <wm-gridrow name="gridrow11_2">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn15" padding="2em unset">
-                            <wm-panel iconclass="wi wi-account-circle" title="Property Details" badgetype="default" class="panel-info" name="panel3">
+                            <wm-panel iconclass="wi wi-account-circle" title="Property Details" badgetype="default" class="panel-primary" name="panel3" closable="false" collapsible="false" expanded="true">
                                 <wm-gridrow name="gridrow12_1">
-                                    <wm-gridcolumn columnwidth="6" name="gridcolumn16">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn16">
                                         <wm-form-field name="sidingMaterial" displayname="Siding Material" show="true" primary-key="false" generator="assigned" key="sidingMaterial" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="6" name="gridcolumn17">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn17">
                                         <wm-form-field name="valueOfWork" displayname="Value Of Work" show="true" primary-key="false" generator="assigned" key="valueOfWork" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn13_2">
+                                        <wm-form-field name="foundationType" displayname="Foundation Type" show="true" primary-key="false" generator="assigned" key="foundationType" type="string" widget="text" maxchars="255" placeholder="Enter value" inputtype="text"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-panel>
                         </wm-gridcolumn>
                     </wm-gridrow>
                 </wm-layoutgrid>
-                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="false" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
+                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
                 <wm-form-field name="users" displayname="Users" show="false" primary-key="false" generator="assigned" key="users" type="list" is-related="true" widget="select" dataset="bind:Variables.UserObj.dataSet" datafield="All Fields"
                 defaultvalue="bind:Variables.UserObj.firstRecord" displayfield="email" placeholder="Select value"></wm-form-field>
                 <wm-form-field name="formTypes" displayname="Form Types" show="false" primary-key="false" generator="assigned" key="formTypes" type="list" is-related="true" widget="select" dataset="bind:Variables.FormObj.dataSet" datafield="All Fields"
                 defaultvalue="bind:Variables.FormObj.firstRecord" placeholder="Select value"></wm-form-field>
                 <wm-form-action key="reset" display-name="Reset" show="true" class="form-reset btn-secondary" iconclass="wi wi-refresh" title="Reset" action="reset()" disabled="false" type="button" update-mode="true"></wm-form-action>
-                <wm-form-action key="save" display-name="Submit" show="true" class="form-save btn-success" iconclass="wi wi-assignment" title="Submit" action="saveAction($event)" disabled="false" type="button" update-mode="true"></wm-form-action>
-                <wm-form-action key="cancel" display-name="Save" show="true" class="form-cancel btn-secondary" iconclass="wi wi-save" title="Save" action="cancelAction($event)" shortcutkey="" disabled="false" type="button" update-mode="true"></wm-form-action>
+                <wm-form-action key="cancel" display-name="Save" show="true" class="form-cancel btn-primary" iconclass="wi wi-save" title="Save" action="cancelAction($event)" shortcutkey="" disabled="false" type="button" update-mode="true"></wm-form-action>
+                <wm-form-action key="save" display-name="Submit" show="true" class="form-save btn-primary" iconclass="wi wi-assignment" title="Submit" action="saveAction($event)" disabled="false" type="button" update-mode="true"></wm-form-action>
             </wm-liveform>
         </wm-page-content>
     </wm-content>
