--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -137,46 +137,35 @@
                         <wm-panel iconclass="wi wi-building" name="panelMyMunicipalities" title="My Municipalities" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid5_2">
                                 <wm-gridrow name="gridrow25">
-                                    <wm-gridcolumn columnwidth="9" name="gridcolumn33_1">
-                                        <wm-composite name="composite14">
-                                            <wm-label class="col-md-3 form-control-static" caption="Search Municipalities" name="label18" fontweight="bold"></wm-label>
-                                            <wm-container class="col-md-9" name="container14">
-                                                <wm-select dataset="bind:Variables.GetMunicipalities.dataSet" searchkey="email" displaylabel="municipalityName" displayimagesrc="logo" datafield="All Fields" name="search2" placeholder="Select Muncipality" displayfield="municipalityName"></wm-select>
-                                            </wm-container>
-                                        </wm-composite>
-                                    </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="3" name="gridcolumn34_1" horizontalalign="center">
-                                        <wm-button class="btn-primary" caption="Add Municipality" type="button" margin="unset 0.5em" iconclass="wi wi-add" on-click="buttonAddMunicipalityClick($event, $scope)" name="button10"></wm-button>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                                <wm-gridrow name="gridrow21_1" padding="2em unset">
-                                    <wm-gridcolumn columnwidth="3" name="gridcolumn25_1"></wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="6" name="gridcolumn27_2">
-                                        <wm-panel iconclass="wi wi-building" name="panel1" title="Your Muncipalities">
-                                            <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" class="media-list" dataset="bind:Variables.MunicpalitiesList.dataSet" navigation="None" name="livelist1" nodatamessage="No Municipalities Selected">
-                                                <wm-listtemplate layout="media" name="listtemplate1">
-                                                    <wm-layoutgrid name="layoutgrid5">
-                                                        <wm-gridrow name="gridrow17_1">
-                                                            <wm-gridcolumn columnwidth="6" name="gridcolumn25_1">
-                                                                <wm-label padding="unset 0.5em" name="label11" caption="bind:Variables.MunicpalitiesList.dataSet[$i].municipalityName"></wm-label>
-                                                            </wm-gridcolumn>
-                                                            <wm-gridcolumn columnwidth="3" name="gridcolumn34_2">
-                                                                <wm-label padding="unset 0.5em" name="label12" caption="bind:Variables.MunicpalitiesList.dataSet[$i].states.stateName"></wm-label>
-                                                            </wm-gridcolumn>
-                                                            <wm-gridcolumn columnwidth="3" name="gridcolumn29" horizontalalign="right">
-                                                                <wm-button class="btn-default btn-primary" caption="Remove" type="button" margin="unset 0.5em" name="buttonRemove" iconclass="wi wi-delete" on-click="buttonRemoveClick($event, $scope, item, currentItemWidgets)"></wm-button>
-                                                            </wm-gridcolumn>
-                                                        </wm-gridrow>
-                                                    </wm-layoutgrid>
-                                                </wm-listtemplate>
-                                            </wm-livelist>
-                                        </wm-panel>
-                                    </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="3" name="gridcolumn28_1"></wm-gridcolumn>
-                                </wm-gridrow>
-                                <wm-gridrow name="gridrow26">
-                                    <wm-gridcolumn columnwidth="12" name="gridcolumn33_5">
-                                        <wm-button caption="Save" type="submit" class="btn-default btn-primary" on-click="buttonUpdateSubscriptionsClick($event, $scope)" name="button10_1" margin="unset unset unset 80%" iconclass="wi wi-save"></wm-button>
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn34_1" horizontalalign="center">
+                                        <wm-livegrid formlayout="dialog" name="livegrid1">
+                                            <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.GetUserSubscriptions.dataSet" navigation="Classic" name="grid1">
+                                                <wm-grid-column binding="dateSubscribed" caption="Date Subscribed" type="string" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipality Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Municipalities"></wm-grid-column>
+                                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                                <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                            </wm-grid>
+                                            <wm-liveform novalidate="false" errormessage="You have already subscribed to that municipality." title="Usersubscriptions Info" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.GetUserSubscriptions.dataSet"
+                                            captionalign="left" captionposition="top" name="liveform2" insertmessage="Municipality added successfully" deletemessage="Municipality deleted successfully">
+                                                <wm-layoutgrid columns="1" name="layoutgrid7">
+                                                    <wm-gridrow name="gridrow27_1">
+                                                        <wm-gridcolumn columnwidth="12" name="gridcolumn33_1">
+                                                            <wm-form-field name="municipalities" displayname="Municipalities" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" required="required" widget="select"
+                                                            placeholder="Select Muncipality" displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field>
+                                                        </wm-gridcolumn>
+                                                    </wm-gridrow>
+                                                </wm-layoutgrid>
+                                                <wm-form-field name="dateSubscribed" displayname="Date Subscribed" show="false" primary-key="false" generator="assigned" key="dateSubscribed" type="timestamp" widget="date" maxchars="255" placeholder="Enter value"
+                                                defaultvalue="CURRENT_DATE" outputformat="timestamp"></wm-form-field>
+                                                <wm-form-field name="users" displayname="Users" show="false" primary-key="false" generator="assigned" key="users" type="list" is-related="true" widget="select" placeholder="Select value"
+                                                defaultvalue="bind:Variables.CurrentUserDetails.dataSet"></wm-form-field>
+                                                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number"
+                                                placeholder="Enter value"></wm-form-field>
+                                                <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
+                                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                            </wm-liveform>
+                                        </wm-livegrid>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
