--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -114,7 +114,8 @@
                                         <wm-form-field name="insuranceExpires" displayname="Insurance Expiration Date" show="true" primary-key="false" generator="assigned" key="insuranceExpires" type="date" required="required" widget="date" placeholder="Select date"
                                         outputformat="yyyy-MM-dd" mindate="bind:Variables.Today.dataSet.dataValue | toDate: 'yyyy-MM-dd'" validationmessage="Insurance Expiration Date is required" datepattern="MM-dd-yyyy"></wm-form-field>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="4" name="gridcolumn21">
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn21" padding="2em unset unset unset">
+                                        <wm-anchor margin="unset 0.5em" name="anchor1" target="_blank" caption=""></wm-anchor>
                                         <wm-form-field name="coi" displayname="Certificate of Insurance (COI)" show="true" primary-key="false" generator="assigned" key="coi" type="blob" widget="upload" maxchars="255" required="true" validationmessage="Certificate of Insurance is required"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
