--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -49,14 +49,19 @@
                                     defaultvalue="USA" readonly="true"></wm-form-field>
                                 </wm-gridcolumn>
                             </wm-gridrow>
+                            <wm-gridrow name="gridrow21_1">
+                                <wm-gridcolumn columnwidth="12" name="gridcolumn32_1" padding="2em unset unset unset">
+                                    <wm-label padding="unset 0.5em" name="label11_2" caption="Please upload an image to use as your profile photo."></wm-label>
+                                </wm-gridcolumn>
+                            </wm-gridrow>
                             <wm-gridrow name="gridrow21">
-                                <wm-gridcolumn columnwidth="12" name="gridcolumn31_1" padding="2em unset">
+                                <wm-gridcolumn columnwidth="12" name="gridcolumn31_1" padding="unset unset unset 2em">
                                     <wm-picture name="picture1" width="200" height="200"></wm-picture>
                                 </wm-gridcolumn>
                             </wm-gridrow>
-                            <wm-gridrow name="gridrow1">
+                            <wm-gridrow name="gridrow1" padding="unset unset unset 0em">
                                 <wm-gridcolumn name="gridcolumn1" columnwidth="4" horizontalalign="left">
-                                    <wm-form-field name="photo" displayname="Please upload an image to use as your profile photo." show="true" primary-key="false" generator="assigned" key="photo" type="blob" widget="upload" maxchars="255"></wm-form-field>
+                                    <wm-form-field name="photo" show="true" primary-key="false" generator="assigned" key="photo" type="blob" widget="upload" maxchars="255"></wm-form-field>
                                 </wm-gridcolumn>
                             </wm-gridrow>
                         </wm-layoutgrid>
